# lf-workflow-dash

./: .copier-answers.yml  .pre-commit-config.yaml  LICENSE  README.md  incubator.html  index.html  index_group.html  lincc_prs.html  lsdb.html  lsdb_issues.html  lsdb_prs.html  pyproject.toml  rail.html  rail_group.html  rail_tracked_workflows.yaml  style.css  tracked_workflows.yaml  tracked_workflows_group.yaml  update.py  update_dashboard.py  update_dashboard_group.py
.github/ISSUE_TEMPLATE/: 1-bug_report.md
.github/workflows/: always-fails  always-fails.yml  main.yml  pre-commit-ci.yml  smoke-test.yml  testing-and-coverage.yml
config/: lsdb_workflows.yaml  rail_tracked_workflows.yaml  rail_tracked_workflows_group.yaml  tracked_incubator.yaml  tracked_workflows.yaml  tracked_workflows_group.yaml
css/: styles.css
html/: rail_group.html
html/css/: styles.css
src/: .pylintrc
src/lf_workflow_dash/: data_types.py  github_request.py  string_helpers.py  update_dashboard.py
src/lf_workflow_dash/lsdb_interrupts/: external_issues.py  github_api.py  open_prs.py
templates/: dash_template.jinja  issue_list.jinja  pr_list.jinja
tests/: .pylintrc
tests/lf_workflow_dash/: test_example_module.py  test_module_action.py  test_packaging.py  test_string_helpers.py
